[package]
name = "lolog"
version = "0.1.0"
authors = ["Martin Algesten <martin@algesten.se>"]
edition = "2018"

[dependencies]
chrono = { version = "0.4", features = ["serde", "rustc-serialize"] }
hostname = "0.3"
log = "0.4"
once_cell = "1"
rustls = { version = "0.17", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "0.8", features = ["v4"] }
webpki = { version = "0.21" }
webpki-roots = { version = "0.20" }
