[package]
name = "lolog"
version = "0.1.0"
authors = ["Martin Algesten <martin@algesten.se>"]
edition = "2021"

[features]
tokio_console = ["console-subscriber"]

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
colorful = "0.2"
console-subscriber = { version = "0.1", optional = true }
hostname = "0.3"
once_cell = "1"
rustls = { version = "0.22" }
serde = { version = "1", features = ["std", "rc", "derive"] }
serde_json = "1"
tracing = "0.1"
tracing-core = "0.1"
tracing-log = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
webpki-roots = "0.26"
