[package]
name = "lolog"
version = "0.1.0"
authors = ["Martin Algesten <martin@algesten.se>"]
edition = "2021"

[features]
tokio_console = ["console-subscriber"]

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
colorful = "0.3"
console-subscriber = { version = "0.4", optional = true }
hostname = "0.4"
libc = "0.2.164"
# We don't want aws-lc-rs, typically a library should leave the backend choice up to the consumer, but we want to be opinionated here.
rustls = { version = "0.23", default-features = false, features = ["logging", "std", "tls12", "ring"] }
serde = { version = "1", features = ["std", "rc", "derive"] }
serde_json = "1"
tracing = "0.1"
tracing-core = "0.1"
tracing-log = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
webpki-roots = "0.26"
